GNOME Bugzilla – Bug 728730
gsocket: Set SO_NOSIGPIPE on sockets on Darwin
Last modified: 2014-07-21 15:33:39 UTC
Patch attached which marginally improves the debugging experience on Xcode on Darwin.
Created attachment 274891 [details] [review] gsocket: Set SO_NOSIGPIPE on sockets on Darwin This is a best-effort approach to preventing SIGPIPE emissions on Darwin and iOS, where they continue to be intercepted by the Xcode debugger even if SIG_IGN prevents them crashing the program. This is similar to the existing code which sets MSG_NOSIGNAL on all send() calls. MSG_NOSIGNAL doesn’t exist on Darwin though.
I pushed a slightly-modified version to wip/nosigpipe. Can you confirm it still compiles/works?
(In reply to comment #2) > I pushed a slightly-modified version to wip/nosigpipe. Can you confirm it still > compiles/works? Unfortunately I might not have access to that Mac again for a week or two. The patch looks good to me, and I’ll test it out when I next get access.
(In reply to comment #2) > I pushed a slightly-modified version to wip/nosigpipe. Can you confirm it still > compiles/works? I finally got access to the Mac again, and the two patches compile and work nicely.